
syntax = "proto3";
package pb;

import "common.proto";
import "market_data.proto";
import "google/api/annotations.proto";
import "strategy.proto";
import "trading.proto";

// GoShare goshare
service GoShare {
  // GetLastTick 获取最新行情
  rpc LastTick(Symbol) returns (MarketDataSnapshot) {
    option (google.api.http) = {
      post : "/api/v1/lastTick"
      body : "*"
      additional_bindings {get : "/api/v1/lastTick/{exchange}/{code}"}
    };
  };
  // SSEStockOptionList 上证所期权列表
  rpc SSEStockOptionList(ReqSSEStockOptionList)
      returns (RspSSEStockOptionList) {
    option (google.api.http) = {
      post : "/api/v1/sseStockOptionList"
      body : "*"
      additional_bindings {get : "/api/v1/sseStockOptionList"}
    };
  };
  // SubscribeMarketData 订阅行情
  rpc SubscribeMarketData(ReqSubscribeMarketData)
      returns (stream pb.MarketDataSnapshot) {
    option (google.api.http) = {
      get : "/api/v1/subscribeMarketData"
    };
  };
  // PushTick 推送tick更新
  rpc PushTick(MarketDataSnapshot) returns (EmptyResponse) {
    option (google.api.http) = {
      post : "/api/v1/pushTick"
      body : "*"
      additional_bindings {get : "/api/v1/pushTick"}
    };
  };
  // 策略列表
  rpc GetStrategyList(EmptyRequest) returns (StrategyList) {
    option (google.api.http).get = "/api/v1/strategies";
  };
  // 查询策略
  rpc GetStrategy(ReqGetStrategy) returns (Strategy) {
    option (google.api.http).get = "/api/v1/strategy/{id}";
  };
  // 创建策略
  rpc CreateStrategy(Strategy) returns (EmptyResponse) {
    option (google.api.http) = {
      post : '/api/v1/strategy'
      body : "*"
    };
  };
  // 删除策略
  rpc DeleteStrategy(ReqDeleteStrategy) returns (EmptyResponse) {
    option (google.api.http).delete = "/api/v1/strategy/{id}";
  };
  // 经纪商列表
  rpc GetTradingRouteList(EmptyRequest) returns (TradingRouteList) {
    option (google.api.http).get = "/api/v1/tradingRouteList";
  }
  // 添加经纪商
  rpc AddTradingRoute(TradingRoute) returns (EmptyResponse) {
    option (google.api.http) = {
      post : '/api/v1/tradingRoute'
      body : "*"
    };
  };
  // 删除经纪商
  rpc DeleteTradingRoute(ReqDeleteTradingRoute) returns (EmptyResponse) {
    option (google.api.http).delete = "/api/v1/tradingRoute/{id}";
  };
  // 交易账号列表
}

message ReqSSEStockOptionList {}
message RspSSEStockOptionList { repeated SSEStockOption list = 1; }

